--- a/css/styles.css
+++ b/css/styles.css
@@ -90,3 +90,10 @@ body {
   animation: bounce 2s infinite;
   padding-top: 160px;
 }
+
+.footer {
+  text-align: center;
+  padding: 15px 0 15px 0;  
+  line-height: 1em; 
+  font-weight: bold; 
+}
