--- a/css/styles.css
+++ b/css/styles.css
@@ -105,3 +105,31 @@ body {
   color: white;
   background-color: transparent;
  }
+ .contact{
+  background-image: url('../assets/backgrounds/c_image.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 500px;      
+}
+
+.contact >h2{
+  text-align: center;
+  color: white;
+  font-weight: bold;
+  padding: 25px;
+}
+#form1 {
+  background-color: transparent;
+}
+textarea {
+  width: 100%;
+  height: 200px;
+  color: white;
+  padding: 12px; 
+  border: 1px solid #ccc; 
+  border-radius: 4px;
+  box-sizing: border-box; 
+  margin-top: 6px; 
+  margin-bottom: 16px;
+  resize: vertical ;
+ }
