--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,7 @@ body {
   background-color: transparent;
  }
  .contact{
-  background-image: url('../assets/backgrounds/c_image.jpg');
+  background-image: url('../img/contactus.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   height: 500px;      
@@ -133,3 +133,92 @@ textarea {
   margin-bottom: 16px;
   resize: vertical ;
  }
+
+ .project{
+  width: 100%;
+  height: 100%;
+  background-color:white;    
+  opacity: 0.2;
+  position: absolute;
+  top: 0.0em;
+  display:none;
+  color:black;
+  font-size: 20px;        
+}
+
+.project2{    
+  width: 100%;
+  height: 100%;
+  background-color:white;    
+  opacity: 0.6;
+  position: absolute;
+  top: 0.0em;
+  display:none;
+  color:black;
+  font-size: 20px;   
+}
+.project3{
+  width: 100%;
+  height: 100%;
+  background-color:white;    
+  opacity: 0.4;
+  position: absolute;
+  top: 0.0em;
+  display:none;
+  color:black;
+  font-size: 20px;
+  }
+.project4{
+  width: 100%;
+  height: 100%;
+  background-color:white;    
+  opacity: 0.5;
+  position: absolute;
+  top: 0.0em;
+  display:none;
+  color:black;
+  font-size: 20px;
+  }
+  .project5{
+  width: 100%;
+  height: 100%;
+  background-color:white;    
+  opacity: 0.5;
+  position: absolute;
+  top: 0.0em;
+  display:none;
+  color:black;
+  font-size: 20px;
+  }
+  .project6{
+  width: 100%;
+  height: 100%;
+  background-color:white;    
+  opacity: 0.5;
+  position: absolute;
+  top: 0.0em;
+  display:none;
+  color:black;
+  font-size: 20px;
+  }
+  .project7{
+  width: 100%;
+  height: 100%;
+  background-color:white;    
+  opacity: 0.5;
+  position: absolute;
+  top: 0.0em;
+  display:none;
+  color:black;
+  font-size: 20px;
+  }
+  .project8{
+  width: 100%;
+  height: 100%;
+  background-color:white;    
+  opacity: 0.5;
+  position: absolute;
+  top: 0.0em;
+  display:none;
+  color:black;
+  font-size: 20px;
