--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,3 @@
-.column {
-  width: 350px;
-  float: left;
-  border: 2px solid rebeccapurple;
-  padding: 6px;
-  margin: 20px;
-  background-color: #1f2833;
-  color: #c5c6c7;
-}
 
 /*  trying to put D logo image over main image ..failled   */
 .MainUnderImage {
@@ -212,6 +203,7 @@ textarea {
   color:black;
   font-size: 20px;
   }
+
   .project8{
   width: 100%;
   height: 100%;
@@ -222,3 +214,71 @@ textarea {
   display:none;
   color:black;
   font-size: 20px;
+  }
+
+.portfolio{
+    padding-top: 20px;
+    padding-bottom: 30px;
+    padding-left: 9%;
+    padding-right: 9%;
+}
+
+.portfolio >h2{
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
+}
+#pro{   
+    margin-top: 30%; 
+    text-align: center;
+    font-size: 25px;   
+}
+.TOGG{
+  text-align: center; 
+  padding: 25px 0 25px 0; 
+  padding-left: 9px;
+  padding-right: 40px;      
+}
+
+.TOGG >h2{    
+  font-weight: bold;
+}
+
+.design {
+  display: none;
+}
+@media  only screen and (max-width:600px){
+  .landing-page{
+      margin-right: auto;
+      margin-left: auto;
+  }     
+} 
+
+.AboutUs {
+padding: 40px;
+text-align:center;
+}
+
+.AboutUs  >h2{
+font-weight: bold;
+}
+
+.AboutUs  >p{
+line-height: 2em;    
+}
+
+
+.Services{
+background-image: url('../img/services.jpg'), linear-gradient(#525052, #413f3f);
+background-repeat: no-repeat;
+background-size: cover;  
+background-position: center;     
+padding: 100px 0 100px 0;
+opacity: 0.9;
+text-align: center;   
+color: white;
+line-height: 2em;
+}
+.Services>h2{
+font-weight: bold;
+}
