--- a/css/styles.css
+++ b/css/styles.css
@@ -1,76 +1,30 @@
-
-/*  trying to put D logo image over main image ..failled   */
-.MainUnderImage {
-  position: relative;
-  top: 0;
-  left: 0;
-}
-
-.LogoImage {
-  position: absolute;
-  top: 60px;
-  left: 80px;
-}
-
-/* TEXT positioning and centering on wecome to delani studio */
-.welcome {
-  position: relative;
-  text-align: center;
-  color: white;
-}
-
-.centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.centered3 {
-  position: absolute;
-  top: 65%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-/* text align centre on services and aboutus */
-.page2 {
-  text-align: center;
-}
-
-/* services  */
-/* Container holding the image and the text */
-.container {
-  position: relative;
-}
-
-/* Bottom right text */
-.text-block {
-  position: absolute;
-  bottom: 150px;
-  right: 20px;
-  background-color: transparent;
-  color: white;
-  padding-left: 20px;
-  padding-right: 20px;
-  text-align: center;
-}
-body {
-  font-family: sans-serif;
+body{
+  font-family:  sans-serif;
   overflow-x: hidden;
 }
+
+
 .landing-page{
-    background-image: url('../img/main.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;  
-    background-position: center;     
-    height:130vh;
-    text-align: center;          
+  background-image: url('../img/main.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;  
+  background-position: center;     
+  height:130vh;
+  text-align: center;          
 }
-#logo  {
+#logo{
   padding-top: 250px;
 }
+.landing-page >h1{
+  text-align: center;
+  color: white;
+  text-transform: uppercase;
+  line-height: 4rem;
+  padding-top: 47px; 
+  font-weight: bold;  
+}
 
-#lp {
+#lp{
   color: white;    
   text-transform: uppercase; 
   text-align: center;  
@@ -82,50 +36,92 @@ body {
   padding-top: 160px;
 }
 
-.footer {
-  text-align: center;
-  padding: 15px 0 15px 0;  
-  line-height: 1em; 
-  font-weight: bold; 
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-55px);
+  }
+  60% {
+    transform: translateY(-45px);
+  }
+}  
+
+
+@media  only screen and (max-width:600px){
+    .landing-page{
+        margin-right: auto;
+        margin-left: auto;
+    }     
+} 
+
+
+.AboutUs {
+  padding: 40px;
+  text-align:center;
 }
 
-#sayhi ::placeholder {
-  color: white;
-}
- #sayhi input{
-  color: white;
-  background-color: transparent;
- }
- .contact{
-  background-image: url('../img/contactus.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: 500px;      
-}
-
-.contact >h2{
-  text-align: center;
-  color: white;
+.AboutUs  >h1{
   font-weight: bold;
-  padding: 25px;
 }
-#form1 {
-  background-color: transparent;
-}
-textarea {
-  width: 100%;
-  height: 200px;
-  color: white;
-  padding: 12px; 
-  border: 1px solid #ccc; 
-  border-radius: 4px;
-  box-sizing: border-box; 
-  margin-top: 6px; 
-  margin-bottom: 16px;
-  resize: vertical ;
- }
 
- .project{
+.AboutUs  >p{
+  line-height: 2em;    
+}
+
+
+.services{
+  background-image: url('../image/services.jpg'), linear-gradient(#525052, #413f3f);
+  background-repeat: no-repeat;
+  background-size: cover;  
+  background-position: center;     
+  padding: 100px 0 100px 0;
+  opacity: 0.9;
+  text-align: center;   
+  color: white;
+  line-height: 2em;
+}
+.services>h2{
+  font-weight: bold;
+}
+
+
+.TOGG {
+  text-align: center; 
+  padding: 25px 0 25px 0; 
+  padding-left: 9px;
+  padding-right: 40px;      
+}
+
+.TOGG  >h2{    
+  font-weight: bold;
+}
+
+.design {
+  display: none;
+}
+
+
+.portfolio{
+  padding-top: 20px;
+  padding-bottom: 30px;
+  padding-left: 9%;
+  padding-right: 9%;
+}
+
+.portfolio >h2{
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase;
+}
+#pro{   
+  margin-top: 30%; 
+  text-align: center;
+  font-size: 25px;    
+}
+
+.project{
   width: 100%;
   height: 100%;
   background-color:white;    
@@ -203,7 +199,6 @@ textarea {
   color:black;
   font-size: 20px;
   }
-
   .project8{
   width: 100%;
   height: 100%;
@@ -216,69 +211,48 @@ textarea {
   font-size: 20px;
   }
 
-.portfolio{
-    padding-top: 20px;
-    padding-bottom: 30px;
-    padding-left: 9%;
-    padding-right: 9%;
+
+.formzs{
+  background-image: url('../img/contactus.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 500px;      
 }
 
-.portfolio >h2{
-    font-weight: bold;
-    text-align: center;
-    text-transform: uppercase;
-}
-#pro{   
-    margin-top: 30%; 
-    text-align: center;
-    font-size: 25px;   
-}
-.TOGG{
-  text-align: center; 
-  padding: 25px 0 25px 0; 
-  padding-left: 9px;
-  padding-right: 40px;      
-}
-
-.TOGG >h2{    
+.formzs >h2{
+  text-align: center;
+  color: white;
   font-weight: bold;
+  padding: 25px;
 }
-
-.design {
-  display: none;
+#form1 {
+  background-color: transparent;
 }
-@media  only screen and (max-width:600px){
-  .landing-page{
-      margin-right: auto;
-      margin-left: auto;
-  }     
-} 
-
-.AboutUs {
-padding: 40px;
-text-align:center;
+.textarea {
+  width: 100%;
+  height: 200px;
+  color: white;
+  padding: 12px; 
+  border: 1px solid #ccc; 
+  border-radius: 4px;
+  box-sizing: border-box; 
+  margin-top: 6px; 
+  margin-bottom: 16px;
+  resize: vertical ;
+ }
+#sayhi ::placeholder {
+  color: white;
 }
-
-.AboutUs  >h2{
-font-weight: bold;
-}
-
-.AboutUs  >p{
-line-height: 2em;    
-}
+ #sayhi input{
+  color: white;
+  background-color: transparent;
+ }
 
 
-.Services{
-background-image: url('../img/services.jpg'), linear-gradient(#525052, #413f3f);
-background-repeat: no-repeat;
-background-size: cover;  
-background-position: center;     
-padding: 100px 0 100px 0;
-opacity: 0.9;
-text-align: center;   
-color: white;
-line-height: 2em;
-}
-.Services>h2{
-font-weight: bold;
+
+.footer{
+  text-align: center;
+  padding: 15px 0 15px 0;  
+  line-height: 1em; 
+  font-weight: bold; 
 }
